// Vitest Snapshot v1

exports[`Toast > Toast.vue > should renders OXD Toast 1`] = `
"<div class=\\"oxd-toast oxd-toast--default\\" aria-live=\\"assertive\\" data-v-d95c87f0=\\"\\">
  <div class=\\"oxd-toast-start\\" data-v-d95c87f0=\\"\\">
    <div class=\\"oxd-toast-icon-container\\" data-v-e0c4fc83=\\"\\" data-v-d95c87f0=\\"\\">
      <div class=\\"oxd-toast-icon-wrap oxd-toast-icon-wrap--default\\" data-v-e0c4fc83=\\"\\"><i class=\\"oxd-icon bi-star oxd-toast-icon\\" data-v-85cde8ca=\\"\\" data-v-e0c4fc83=\\"\\"></i></div>
    </div>
    <div class=\\"oxd-toast-content oxd-toast-content--default\\" data-v-d95c87f0=\\"\\">
      <p class=\\"oxd-text oxd-text--p oxd-text--toast-title oxd-toast-content-text\\" data-v-0334bd57=\\"\\" data-v-d95c87f0=\\"\\">Test Toast</p>
      <p class=\\"oxd-text oxd-text--p oxd-text--toast-message oxd-toast-content-text\\" data-v-0334bd57=\\"\\" data-v-d95c87f0=\\"\\"></p>
    </div>
  </div>
  <div class=\\"oxd-toast-close-container\\" data-v-d86c7eba=\\"\\" data-v-d95c87f0=\\"\\">
    <div class=\\"oxd-toast-close oxd-toast-close--default\\" role=\\"button\\" data-v-d86c7eba=\\"\\">×</div>
  </div>
</div>"
`;

exports[`Toast > Toast.vue > should renders OXD Toast error 1`] = `
"<div class=\\"oxd-toast oxd-toast--error\\" aria-live=\\"assertive\\" data-v-d95c87f0=\\"\\">
  <div class=\\"oxd-toast-start\\" data-v-d95c87f0=\\"\\">
    <div class=\\"oxd-toast-icon-container\\" data-v-e0c4fc83=\\"\\" data-v-d95c87f0=\\"\\">
      <div class=\\"oxd-toast-icon-wrap oxd-toast-icon-wrap--error\\" data-v-e0c4fc83=\\"\\"><i class=\\"oxd-icon bi-exclamation-circle oxd-toast-icon\\" data-v-85cde8ca=\\"\\" data-v-e0c4fc83=\\"\\"></i></div>
    </div>
    <div class=\\"oxd-toast-content oxd-toast-content--error\\" data-v-d95c87f0=\\"\\">
      <p class=\\"oxd-text oxd-text--p oxd-text--toast-title oxd-toast-content-text\\" data-v-0334bd57=\\"\\" data-v-d95c87f0=\\"\\">Test Toast</p>
      <p class=\\"oxd-text oxd-text--p oxd-text--toast-message oxd-toast-content-text\\" data-v-0334bd57=\\"\\" data-v-d95c87f0=\\"\\"></p>
    </div>
  </div>
  <div class=\\"oxd-toast-close-container\\" data-v-d86c7eba=\\"\\" data-v-d95c87f0=\\"\\">
    <div class=\\"oxd-toast-close oxd-toast-close--error\\" role=\\"button\\" data-v-d86c7eba=\\"\\">×</div>
  </div>
</div>"
`;

exports[`Toast > Toast.vue > should renders OXD Toast info 1`] = `
"<div class=\\"oxd-toast oxd-toast--info\\" aria-live=\\"assertive\\" data-v-d95c87f0=\\"\\">
  <div class=\\"oxd-toast-start\\" data-v-d95c87f0=\\"\\">
    <div class=\\"oxd-toast-icon-container\\" data-v-e0c4fc83=\\"\\" data-v-d95c87f0=\\"\\">
      <div class=\\"oxd-toast-icon-wrap oxd-toast-icon-wrap--info\\" data-v-e0c4fc83=\\"\\"><i class=\\"oxd-icon bi-info-circle oxd-toast-icon\\" data-v-85cde8ca=\\"\\" data-v-e0c4fc83=\\"\\"></i></div>
    </div>
    <div class=\\"oxd-toast-content oxd-toast-content--info\\" data-v-d95c87f0=\\"\\">
      <p class=\\"oxd-text oxd-text--p oxd-text--toast-title oxd-toast-content-text\\" data-v-0334bd57=\\"\\" data-v-d95c87f0=\\"\\">Test Toast</p>
      <p class=\\"oxd-text oxd-text--p oxd-text--toast-message oxd-toast-content-text\\" data-v-0334bd57=\\"\\" data-v-d95c87f0=\\"\\"></p>
    </div>
  </div>
  <div class=\\"oxd-toast-close-container\\" data-v-d86c7eba=\\"\\" data-v-d95c87f0=\\"\\">
    <div class=\\"oxd-toast-close oxd-toast-close--info\\" role=\\"button\\" data-v-d86c7eba=\\"\\">×</div>
  </div>
</div>"
`;

exports[`Toast > Toast.vue > should renders OXD Toast success 1`] = `
"<div class=\\"oxd-toast oxd-toast--success\\" aria-live=\\"assertive\\" data-v-d95c87f0=\\"\\">
  <div class=\\"oxd-toast-start\\" data-v-d95c87f0=\\"\\">
    <div class=\\"oxd-toast-icon-container\\" data-v-e0c4fc83=\\"\\" data-v-d95c87f0=\\"\\">
      <div class=\\"oxd-toast-icon-wrap oxd-toast-icon-wrap--success\\" data-v-e0c4fc83=\\"\\"><i class=\\"oxd-icon bi-check2 oxd-toast-icon\\" data-v-85cde8ca=\\"\\" data-v-e0c4fc83=\\"\\"></i></div>
    </div>
    <div class=\\"oxd-toast-content oxd-toast-content--success\\" data-v-d95c87f0=\\"\\">
      <p class=\\"oxd-text oxd-text--p oxd-text--toast-title oxd-toast-content-text\\" data-v-0334bd57=\\"\\" data-v-d95c87f0=\\"\\">Test Toast</p>
      <p class=\\"oxd-text oxd-text--p oxd-text--toast-message oxd-toast-content-text\\" data-v-0334bd57=\\"\\" data-v-d95c87f0=\\"\\"></p>
    </div>
  </div>
  <div class=\\"oxd-toast-close-container\\" data-v-d86c7eba=\\"\\" data-v-d95c87f0=\\"\\">
    <div class=\\"oxd-toast-close oxd-toast-close--success\\" role=\\"button\\" data-v-d86c7eba=\\"\\">×</div>
  </div>
</div>"
`;

exports[`Toast > Toast.vue > should renders OXD Toast warn 1`] = `
"<div class=\\"oxd-toast oxd-toast--warn\\" aria-live=\\"assertive\\" data-v-d95c87f0=\\"\\">
  <div class=\\"oxd-toast-start\\" data-v-d95c87f0=\\"\\">
    <div class=\\"oxd-toast-icon-container\\" data-v-e0c4fc83=\\"\\" data-v-d95c87f0=\\"\\">
      <div class=\\"oxd-toast-icon-wrap oxd-toast-icon-wrap--warn\\" data-v-e0c4fc83=\\"\\"><i class=\\"oxd-icon bi-exclamation-triangle oxd-toast-icon\\" data-v-85cde8ca=\\"\\" data-v-e0c4fc83=\\"\\"></i></div>
    </div>
    <div class=\\"oxd-toast-content oxd-toast-content--warn\\" data-v-d95c87f0=\\"\\">
      <p class=\\"oxd-text oxd-text--p oxd-text--toast-title oxd-toast-content-text\\" data-v-0334bd57=\\"\\" data-v-d95c87f0=\\"\\">Test Toast</p>
      <p class=\\"oxd-text oxd-text--p oxd-text--toast-message oxd-toast-content-text\\" data-v-0334bd57=\\"\\" data-v-d95c87f0=\\"\\"></p>
    </div>
  </div>
  <div class=\\"oxd-toast-close-container\\" data-v-d86c7eba=\\"\\" data-v-d95c87f0=\\"\\">
    <div class=\\"oxd-toast-close oxd-toast-close--warn\\" role=\\"button\\" data-v-d86c7eba=\\"\\">×</div>
  </div>
</div>"
`;
